<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/meet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:hint="@string/metting_name_hint"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/meet_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/meet_name"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:hint="@string/metting_description_hint"
                android:textSize="10sp" />
        </RelativeLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/meet_start_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_start_date_title"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/meet_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/start_date_hint"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/meet_end_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_end_date_title"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/meet_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/end_date_hint"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/i_will_be_there" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/participating_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/pick_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_image"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/add_meeting_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/common_add" />
    </LinearLayout>
</android.support.v7.widget.CardView>